# inertia-fastapi-svelte

./: .gitignore  main.py  pyproject.toml
views/: index.html  vite.config.ts
views/src/: main.js
